--- a/b-klassen1.html
+++ b/b-klassen1.html
@@ -43,13 +43,12 @@
      <div class="liste">lorem ipsum 10</div>
    </li>
  </ul>
-hej med dig
- <article>
+hej du er mega sej
    <h2></h2>
    <p class="red"></p>
  </article>
 
- <img src="haj.gif" alt="haj" class="haj">
+ <img src="pictures/haj.gif" alt="haj" class="haj">
 
 <article>
   <section class="">
